1. assignment creation: update spacing of form and fix style for checkbox map file 2. assignment upload submission: update headers

--- a/app/assets/stylesheets/assignments.scss
+++ b/app/assets/stylesheets/assignments.scss
@@ -70,18 +70,26 @@ body.assignments_index {
 
 body.assignments {
   label {
-    width: 200px;
-    margin-top: 5px;
-    display: inline-block;
+    margin-top: $spacer * 0.5;
   }
+
   input.submit {
     margin-top: 15px;
   }
-  div.field_with_errors {
-    display: inline-table;
-  }
+
+  // div.field_with_errors {
+  //   display: inline-table;
+  // }
+
   div.note {
     font-size: 11px;
+  }
+}
+
+body.assignments_new, body.assignments_create, body.assignments_show {
+  form input#assignment_mapbox {
+    margin-top: $spacer * 0.75;
+    margin-left: $spacer;
   }
 }
 
