--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -33,10 +33,10 @@ body.users {
     color: rgb(0, 160, 0);
   }
 
-  div.field_with_errors {
-    padding: 0px;
-    display: inline-table;
-  }
+  // div.field_with_errors {
+  //   padding: 0px;
+  //   display: inline-table;
+  // }
 
   hr {
     margin-top: 15px;
